# Deepseek-Daily-Newsletter

./: .env.test  .gitignore  Dockerfile  Makefile  README.md  apply-local-secret.sh  pyproject.toml
.github/workflows/: test.yml
deepseek_daily_newsletter/: generate_newsletter.py  generate_newsletters.py  main.py  send_email.py
deepseek_daily_newsletter/static/: emails.json  prompts.json
k8s/: deployment.yaml  secret.yaml
tests/: test_generate_newsletter.py  test_main.py  test_send_email.py
