[project]
name = "deepseek-daily-newsletter"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohit Bhole",email = "mohitb.steam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "requests",
    "schedule",
    "pytest",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
